--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mini-rest-api",
   "version": "1.0.0",
+  "description": "Simple REST API with Express",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
