Final resubmission after feedback: added routes, error handler, tests

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mini-rest-api",
   "version": "1.0.0",
-  "description": "Simple REST API with Express",
+  "description": "A simple REST API using Node.js and Express",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
